cmake_minimum_required(VERSION 3.8)

include(cmake/zz.cmake)

project(ZZ)

add_subdirectory(pthreads)

add_subdirectory(ZZ/Prelude)
add_subdirectory(ZZ/CmdLine)
add_subdirectory(ZZ/Generics)
add_subdirectory(ZZ/EXTERN)
add_subdirectory(ZZ/Lua)

add_subdirectory(ZZ/Npn4)
add_subdirectory(ZZ/Netlist)
add_subdirectory(ZZ/MiniSat)
add_subdirectory(ZZ/MetaSat)
add_subdirectory(ZZ/BFunc)
add_subdirectory(ZZ/CnfMap)
add_subdirectory(ZZ/Bip/Common)
add_subdirectory(ZZ/Abc)
add_subdirectory(ZZ/AbcInterface)
add_subdirectory(ZZ/Bip)
add_subdirectory(ZZ/Dsd)
add_subdirectory(ZZ/Md5)

add_subdirectory(ZZ/CutSim)
add_subdirectory(ZZ/LinReg)
add_subdirectory(ZZ/Liberty)
add_subdirectory(ZZ/Verilog)
add_subdirectory(ZZ/DelayOpt)
add_subdirectory(ZZ/EqCheck)
add_subdirectory(ZZ/Gig)

if( NOT WIN32 )
    add_subdirectory(ZZ/Exploratory/Xml)
    add_subdirectory(ZZ/Unix)
    add_subdirectory(ZZ/Cluster)
    add_subdirectory(ZZ/LutMap)
    add_subdirectory(ZZ/TechMap)
    add_subdirectory(ZZ/Gip)
    add_subdirectory(ZZ/PunySat)
    add_subdirectory(ZZ/Fta)
    add_subdirectory(ZZ/MaxSat)
endif()

add_subdirectory(ZZ/Graphics)
add_subdirectory(ZZ/Sdl)
